# EasyAvatar

./: .gitignore  CMakeLists.txt  EasyAvatarPlugin.sln  EasyAvatarPlugin.vcxproj  EasyAvatarPlugin.vcxproj.filters  README.md  plugin.c  plugin.h  test_plugin.sln  test_plugin.vcxproj
TeamSpeakSDK/teamspeak/: public_definitions.h
src/: EasyAvatar.c  EasyAvatar.h  plugin.c
